--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,11 @@
 
 # Jupyter Notebook
 .ipynb_checkpoints
+COLAB_diabetes_decision_tree_Areerat.ipynb
+diabetes_decision_tree_Areerat.ipynb
+decision_tree.png
+diabetes.png
+.Rhistory
+
+
 
